--- a/index.html
+++ b/index.html
@@ -23,9 +23,22 @@
             <h2>About ZaraHive</h2>
             <p>Introduction to ZaraHive and overview of services offered.</p>
         </section>
+        <section id="api-data">
+            <h2>API Data</h2>
+            <p id="policy"></p>
+        </section>
     </main>
     <footer>
         <p>&copy; 2025 ZaraHive</p>
     </footer>
+    <script>
+        // Fetch data from the API
+        fetch('http://localhost:3000/api/policy')
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById('policy').textContent = data.policy;
+            })
+            .catch(error => console.error('Error fetching API data:', error));
+    </script>
 </body>
 </html>
