--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
             <h2>API Data</h2>
             <p id="policy"></p>
         </section>
+        <section id="chatbot">
+            <h2>Chat with our AI</h2>
+            <div id="chatbox">
+                <div id="messages"></div>
+                <input type="text" id="userInput" placeholder="Type a message...">
+                <button onclick="sendMessage()">Send</button>
+            </div>
+        </section>
     </main>
     <footer>
         <p>&copy; 2025 ZaraHive</p>
@@ -39,6 +47,23 @@
                 document.getElementById('policy').textContent = data.policy;
             })
             .catch(error => console.error('Error fetching API data:', error));
+
+        // Chatbot functionality
+        async function sendMessage() {
+            const userInput = document.getElementById('userInput').value;
+            const messagesDiv = document.getElementById('messages');
+            messagesDiv.innerHTML += `<p>User: ${userInput}</p>`;
+            document.getElementById('userInput').value = '';
+
+            const response = await fetch('http://localhost:3000/chat', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ message: userInput })
+            });
+            const data = await response.json();
+            messagesDiv.innerHTML += `<p>AI: ${data.response}</p>`;
+        }
     </script>
 </body>
 </html>
+     
