--- a/hire-ai.html
+++ b/hire-ai.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hire AI Agents - ZaraHive</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.openai.com/api/client.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/openai-client@latest/dist/OpenAI.min.js"></script>
 </head>
 <body>
     <header>
