--- a/hire-ai.html
+++ b/hire-ai.html
@@ -53,7 +53,7 @@
             }
         };
 
-        let conversationHistory = [];
+        let conversationHistory = []; // Initialize conversationHistory before using it
 
         async function sendMessage() {
             const userInput = document.getElementById('userInput').value;
