--- a/index.html
+++ b/index.html
@@ -5,6 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZaraHive - Home</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Add responsive styles */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 1rem;
+            text-align: center;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin-right: 1rem;
+        }
+
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+        }
+
+        main {
+            padding: 1rem;
+        }
+
+        #chatbox {
+            border: 1px solid #ccc;
+            padding: 1rem;
+            margin-top: 1rem;
+        }
+
+        #messages {
+            border: 1px solid #ccc;
+            height: 200px;
+            overflow-y: auto;
+            padding: 0.5rem;
+            margin-bottom: 1rem;
+        }
+
+        @media (max-width: 600px) {
+            nav ul li {
+                display: block;
+                margin: 0;
+                padding: 0.5rem 0;
+            }
+        }
+
+        @media (max-width: 768px) {
+            #chatbox {
+                padding: 0.5rem;
+            }
+
+            #messages {
+                height: 150px;
+            }
+        }
+    </style>
 </head>
 <body>
     <header>
