--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ZaraHive - Home</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        /* Add responsive styles */
+        /* Responsive styles */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -107,7 +107,7 @@
     </footer>
     <script>
         // Fetch data from the API
-        fetch('http://localhost:3000/api/policy')
+        fetch('https://api.yourdomain.com/policy')
             .then(response => response.json())
             .then(data => {
                 document.getElementById('policy').textContent = data.policy;
@@ -127,7 +127,7 @@
 
             conversationHistory.push({ role: 'user', content: userInput });
 
-            const response = await fetch('http://localhost:3000/chat', {
+            const response = await fetch('https://api.yourdomain.com/chat', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ message: userInput, history: conversationHistory })
