--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
             margin-bottom: 1rem;
         }
 
+        footer {
+            font-size: 0.8rem; /* Reduced font size */
+        }
+
         @media (max-width: 600px) {
             nav ul li {
                 display: block;
