--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
         }
 
         footer {
+            background-color: #333;
+            color: #fff;
             font-size: 0.8rem; /* Reduced font size */
+            padding: 1rem;
+            text-align: center;
         }
 
         @media (max-width: 600px) {
@@ -107,7 +111,8 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 ZaraHive</p>
+        <p>&copy; 2025 ZaraHive. All rights reserved.</p>
+        <p>Terms of Service | Privacy Policy | Contact Us</p>
     </footer>
     <script>
         // Fetch data from the API
