--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZaraHive - Home</title>
+    <title>ZaraHive Dashboard</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        /* Responsive styles */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            background-color: #f4f4f9;
         }
 
         header {
@@ -20,13 +20,22 @@
             text-align: center;
         }
 
+        nav {
+            background-color: #444;
+            color: #fff;
+            padding: 1rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
         nav ul {
             list-style: none;
             padding: 0;
+            display: flex;
         }
 
         nav ul li {
-            display: inline;
             margin-right: 1rem;
         }
 
@@ -36,79 +45,73 @@
         }
 
         main {
-            padding: 1rem;
+            padding: 2rem;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
-        #chatbox {
+        .card {
+            background-color: #fff;
             border: 1px solid #ccc;
+            border-radius: 5px;
             padding: 1rem;
-            margin-top: 1rem;
-        }
-
-        #messages {
-            border: 1px solid #ccc;
-            height: 200px;
-            overflow-y: auto;
-            padding: 0.5rem;
-            margin-bottom: 1rem;
+            margin: 1rem;
+            width: 80%;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         footer {
             background-color: #333;
             color: #fff;
-            font-size: 0.8rem; /* Reduced font size */
+            font-size: 0.8rem;
             padding: 1rem;
             text-align: center;
         }
 
         @media (max-width: 600px) {
+            nav ul {
+                flex-direction: column;
+            }
+
             nav ul li {
-                display: block;
-                margin: 0;
-                padding: 0.5rem 0;
-            }
-        }
-
-        @media (max-width: 768px) {
-            #chatbox {
-                padding: 0.5rem;
-            }
-
-            #messages {
-                height: 150px;
+                margin: 0.5rem 0;
             }
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to ZaraHive</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="policy.html">User Data Deletion Policy</a></li>
-                <li><a href="ai-admin.html">AI Agent Administration</a></li>
-                <li><a href="hire-ai.html">Hire AI Agents</a></li>
-            </ul>
-        </nav>
+        <h1>ZaraHive Dashboard</h1>
     </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="policy.html">User Data Deletion Policy</a></li>
+            <li><a href="ai-admin.html">AI Agent Administration</a></li>
+            <li><a href="hire-ai.html">Hire AI Agents</a></li>
+        </ul>
+        <div class="user-info">
+            <p>Welcome, User</p>
+        </div>
+    </nav>
     <main>
-        <section>
+        <div class="card">
             <h2>About ZaraHive</h2>
             <p>Introduction to ZaraHive and overview of services offered.</p>
-        </section>
-        <section id="api-data">
+        </div>
+        <div class="card" id="api-data">
             <h2>API Data</h2>
             <p id="policy"></p>
-        </section>
-        <section id="chatbot">
+        </div>
+        <div class="card" id="chatbot">
             <h2>Chat with Zara</h2>
             <div id="chatbox">
                 <div id="messages"></div>
                 <input type="text" id="userInput" placeholder="Type a message...">
                 <button onclick="sendMessage()">Send</button>
             </div>
-        </section>
+        </div>
     </main>
     <footer>
         <p>&copy; 2025 ZaraHive. All rights reserved.</p>
