--- a/index.html
+++ b/index.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZaraHive Dashboard</title>
+    <title>ZaraHive Hub</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Salesforce Sans', Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f9;
+            color: #222;
         }
 
         header {
-            background-color: #333;
+            background-color: #00A1E0;
             color: #fff;
             padding: 1rem;
             text-align: center;
         }
 
         nav {
-            background-color: #444;
+            background-color: #0070D2;
             color: #fff;
             padding: 1rem;
             display: flex;
@@ -82,7 +83,7 @@
 </head>
 <body>
     <header>
-        <h1>ZaraHive Dashboard</h1>
+        <h1>ZaraHive Hub</h1>
     </header>
     <nav>
         <ul>
