--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-   <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -70,17 +70,25 @@
 
             conversationHistory.push({ role: 'user', content: userInput });
 
-            const response = await fetch('https://api.yourdomain.com/chat', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ message: userInput, history: conversationHistory })
-            });
-            const data = await response.json();
-            conversationHistory.push({ role: 'assistant', content: data.response });
+            try {
+                const response = await fetch('https://api.yourdomain.com/chat', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ message: userInput, history: conversationHistory })
+                });
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                const data = await response.json();
+                conversationHistory.push({ role: 'assistant', content: data.response });
 
-            messagesDiv.innerHTML += `<p class="assistant-message">${chatbotName}: ${data.response}</p>`;
-            messagesDiv.scrollTop = messagesDiv.scrollHeight;
+                messagesDiv.innerHTML += `<p class="assistant-message">${chatbotName}: ${data.response}</p>`;
+                messagesDiv.scrollTop = messagesDiv.scrollHeight;
+            } catch (error) {
+                console.error('Error sending message:', error);
+                messagesDiv.innerHTML += `<p class="error-message">Error: ${error.message}</p>`;
+            }
         }
     </script>
 </body>
-</html> 
+</html>
