--- a/index.html
+++ b/index.html
@@ -90,5 +90,7 @@
             }
         }
     </script>
+    <!-- TikTok Verification Signature -->
+    <p>tiktok-developers-site-verification=C0JBQ5B8M8oaVo1sIdUziVw4W3ag43pQ</p>
 </body>
 </html>
