--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -27,6 +27,6 @@
     <h2>Variation of Terms</h2>
     <p>ZaraHive is permitted to revise these terms at any time as it sees fit, and by using this website you are expected to review these terms on a regular basis.</p>
     <h2>Contact Information</h2>
-    <p>If you have any questions about these Terms, please contact us at support@zarahive.com.</p>
+    <p>If you have any questions about these Terms, please contact us at hello@zaraluxe.space.</p>
 </body>
 </html>
