--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     <li><a href="policy.html">User Data Deletion Policy</a></li>
                     <li><a href="ai-admin.html">AI Agent Administration</a></li>
                     <li><a href="hire-ai.html">Hire AI Agents</a></li>
+                    <li><a href="terms-of-service.html">Terms of Service</a></li>
                 </ul>
             </nav>
         </div>
@@ -45,7 +46,7 @@
     <footer>
         <div class="footer-content">
             <p>&copy; 2025 ZaraHive. All rights reserved.</p>
-            <p><a href="#">Terms of Service</a> | <a href="#">Privacy Policy</a> | <a href="#">Contact Us</a></p>
+            <p><a href="terms-of-service.html">Terms of Service</a> | <a href="privacy-policy.html">Privacy Policy</a> | <a href="contact.html">Contact Us</a></p>
         </div>
     </footer>
     <script>
