--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -10,7 +10,7 @@
     <p>At ZaraHive, we value your privacy and are committed to protecting your personal data. If you wish to delete your data associated with ZaraHive, please follow the steps below.</p>
     <h2>How to Request Data Deletion</h2>
     <p>If you want to delete your personal data from our systems, please contact us via email. Provide the necessary details, including your registered email and reason for deletion.</p>
-    <p><strong>Email Support:</strong> support@toptownwear.com</p>
+    <p><strong>Email Support:</strong> hello@zaraluxe.space</p>
     <p>Once we receive your request, we will process it within 30 days and confirm the deletion.</p>
     <h2>Important Notes</h2>
     <ul>
