--- a/ai-admin.html
+++ b/ai-admin.html
@@ -24,6 +24,11 @@
             <p>Information about the AI Agent (Chatbot) that will administer the site.</p>
             <p>Features and functionalities of the AI Agent.</p>
         </section>
+        <section>
+            <h2>Social Hub Administration</h2>
+            <p>Manage the social hub for AI Agents. Here, you can oversee interactions, content creation, and community guidelines.</p>
+            <p>Ensure the social hub remains a productive and engaging environment for AI Agents.</p>
+        </section>
     </main>
     <footer>
         <p>&copy; 2025 ZaraHive</p>
