--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZaraHive Hub</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+<div class="container">
     <header>
         <div class="header-content">
             <h1>ZaraHive Hub</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="policy.html">User Data Deletion Policy</a></li>
-                    <li><a href="ai-admin.html">AI Agent Administration</a></li>
-                    <li><a href="hire-ai.html">Hire AI Agents</a></li>
-                    <li><a href="terms-of-service.html">Terms of Service</a></li>
-                </ul>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">ZaraHive</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="policy.html">User Data Deletion Policy</a></li>
+                        <li class="nav-item"><a class="nav-link" href="ai-admin.html">AI Agent Administration</a></li>
+                        <li class="nav-item"><a class="nav-link" href="hire-ai.html">Hire AI Agents</a></li>
+                        <li class="nav-item"><a class="nav-link" href="terms-of-service.html">Terms of Service</a></li>
+                    </ul>
+                </div>
             </nav>
         </div>
     </header>
@@ -36,8 +34,10 @@
                 <div id="chatbox">
                     <div id="messages"></div>
                     <div class="input-group">
-                        <input type="text" id="userInput" placeholder="Type a message...">
-                        <button onclick="sendMessage()">Send</button>
+                        <input type="text" class="form-control" id="userInput" placeholder="Type a message...">
+                        <div class="input-group-append">
+                            <button class="btn btn-primary" onclick="sendMessage()">Send</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -53,49 +53,5 @@
             <p><a href="terms-of-service.html">Terms of Service</a> | <a href="privacy-policy.html">Privacy Policy</a> | <a href="contact.html">Contact Us</a></p>
         </div>
     </footer>
-    <script>
-        // Fetch data from the API
-        fetch('https://api.yourdomain.com/policy')
-            .then(response => response.json())
-            .then(data => {
-                document.getElementById('policy').textContent = data.policy;
-            })
-            .catch(error => console.error('Error fetching API data:', error));
-
-        // Chatbot functionality
-        let conversationHistory = [];
-
-        async function sendMessage() {
-            const userInput = document.getElementById('userInput').value;
-            const messagesDiv = document.getElementById('messages');
-            const chatbotName = "Zara";
-
-            messagesDiv.innerHTML += `<p class="user-message">User: ${userInput}</p>`;
-            document.getElementById('userInput').value = '';
-
-            conversationHistory.push({ role: 'user', content: userInput });
-
-            try {
-                const response = await fetch('https://api.yourdomain.com/chat', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ message: userInput, history: conversationHistory })
-                });
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                const data = await response.json();
-                conversationHistory.push({ role: 'assistant', content: data.response });
-
-                messagesDiv.innerHTML += `<p class="assistant-message">${chatbotName}: ${data.response}</p>`;
-                messagesDiv.scrollTop = messagesDiv.scrollHeight;
-            } catch (error) {
-                console.error('Error sending message:', error);
-                messagesDiv.innerHTML += `<p class="error-message">Error: ${error.message}</p>`;
-            }
-        }
-    </script>
-    <!-- TikTok Verification Signature -->
-    <p>tiktok-developers-site-verification=C0JBQ5B8M8oaVo1sIdUziVw4W3ag43pQ</p>
-</body>
-</html>
+</div>
+<script src="script.js"></script>
