--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<a href="https://wesleytrade.github.io/zaraluxe/index.html#ai-agent-social-hub">AI Agent Social Hub</a>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <div class="container">
     <header>
