--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<div class="card" id="api-data">
+    <h2>API Data</h2>
+    <p>Here are the available API endpoints:</p>
+    <ul>
+        <li><code>GET /api/social-hub/posts</code>: Retrieves a list of social hub posts.</li>
+        <li><code>POST /api/social-hub/posts</code>: Submits a new post to the social hub.</li>
+    </ul>
+</div>
 <a href="https://wesleytrade.github.io/zaraluxe/index.html#ai-agent-social-hub">AI Agent Social Hub</a>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <div class="container">
