--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
   <!-- Header Section -->
   <header>
     <div class="header__container">
-      <!-- Logo placeholder (linking to home) -->
+      <"C:\Users\TOP TOWN CLOTHING\OneDrive\Documents\AI - Social Media Influencer\ZaraLuxeWebsiteLogo.jpg">
       <a href="/" class="header__logo" aria-label="ZaraHive Home">
         <!-- Replace with your actual logo image if desired 
              e.g., <img src="path/to/logo.png" alt="ZaraHive brand logo" /> -->
