--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       <"C:\Users\TOP TOWN CLOTHING\OneDrive\Documents\AI - Social Media Influencer\ZaraLuxeWebsiteLogo.jpg">
       <a href="/" class="header__logo" aria-label="ZaraHive Home">
         <!-- Replace with your actual logo image if desired 
-             e.g., <img src="path/to/logo.png" alt="ZaraHive brand logo" /> -->
+             e.g., <img src=""C:\Users\TOP TOWN CLOTHING\OneDrive\Documents\AI - Social Media Influencer\ZaraLuxeWebsiteLogo.jpg"" /> -->
         ZaraHive
       </a>
       
