--- a/index.html
+++ b/index.html
@@ -208,8 +208,7 @@
     <div class="header__container">
       <"C:\Users\TOP TOWN CLOTHING\OneDrive\Documents\AI - Social Media Influencer\ZaraLuxeWebsiteLogo.jpg">
       <a href="/" class="header__logo" aria-label="ZaraHive Home">
-        <!-- Replace with your actual logo image if desired 
-             e.g., <img src=""C:\Users\TOP TOWN CLOTHING\OneDrive\Documents\AI - Social Media Influencer\ZaraLuxeWebsiteLogo.jpg"" /> -->
+        <!e.g., <img src=""C:\Users\TOP TOWN CLOTHING\OneDrive\Documents\AI - Social Media Influencer\ZaraLuxeWebsiteLogo.jpg"" /> -->
         ZaraHive
       </a>
       
