--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     body {
       font-family: Arial, sans-serif;
       line-height: 1.6;
-      color: #333;
-      background-color: #f9f9f9;
+      color: #e0e0e0; /* Changed from #333 to a lighter color for contrast on dark background */
+      background-color: #0a0c14; /* Dark background to match the neon/glow feel */
     }
     a {
       text-decoration: none;
@@ -28,8 +28,8 @@
 
     /* Header styling */
     header {
-      background-color: #ffffff;
-      border-bottom: 1px solid #ddd;
+      background-color: #0f0f1f; /* Slightly different from body to add contrast */
+      border-bottom: 1px solid #1f1f3c;
       padding: 1rem;
     }
     .header__container {
@@ -39,38 +39,44 @@
       max-width: 1200px;
       margin: 0 auto;
     }
+    /* Logo styling */
     .header__logo {
-      font-weight: bold;
-      font-size: 1.25rem;
+      display: inline-block;
+      max-height: 50px; /* Adjust as needed */
     }
+
     .header__nav ul {
       display: flex;
       gap: 1rem;
+      list-style: none;
     }
     .header__nav a {
-      color: #333;
+      color: #cfcff7; /* Light text color for nav links */
       transition: color 0.3s ease;
+      font-weight: 500;
     }
     .header__nav a:hover {
-      color: #0070f3;
+      color: #7a7aff; /* Slightly brighter hover color */
     }
 
     /* Hero section */
     #hero {
-      background-color: #eef1ff;
+      background: linear-gradient(135deg, #15172b 0%, #0e0f1f 100%);
       padding: 3rem 1rem;
       text-align: center;
     }
     .hero__headline {
       font-size: 2rem;
       margin-bottom: 1rem;
+      color: #e1e1ff;
     }
     .hero__subtext {
       font-size: 1.2rem;
       margin-bottom: 2rem;
+      color: #bdbdf2;
     }
     .hero__cta {
-      background-color: #0070f3;
+      background-color: #7a00ff;
       color: #ffffff;
       padding: 0.75rem 1.5rem;
       border-radius: 4px;
@@ -78,7 +84,7 @@
       font-weight: bold;
     }
     .hero__cta:hover {
-      background-color: #005bb5;
+      background-color: #5500b8;
     }
 
     /* About/Overview section */
@@ -90,9 +96,11 @@
     .about__title {
       font-size: 1.5rem;
       margin-bottom: 1rem;
+      color: #dedeea;
     }
     .about__description {
       margin-bottom: 1rem;
+      color: #bbbbdd;
     }
     .about__features {
       display: grid;
@@ -101,10 +109,16 @@
       margin-top: 1rem;
     }
     .about__feature-card {
-      background-color: #ffffff;
-      border: 1px solid #ddd;
+      background-color: #1a1a2f;
+      border: 1px solid #2b2b4a;
       border-radius: 4px;
       padding: 1rem;
+    }
+    .about__feature-card h3 {
+      color: #d2d2ff;
+    }
+    .about__feature-card p {
+      color: #cacadf;
     }
 
     /* API Data section */
@@ -116,13 +130,20 @@
     .api__title {
       font-size: 1.5rem;
       margin-bottom: 1rem;
+      color: #dedeea;
     }
     .api__endpoints {
-      background-color: #ffffff;
-      border: 1px solid #ddd;
+      background-color: #1a1a2f;
+      border: 1px solid #2b2b4a;
       border-radius: 4px;
       padding: 1rem;
       line-height: 1.8;
+    }
+    .api__endpoints strong {
+      color: #9c9ce6;
+    }
+    .api__endpoints p {
+      color: #d0d0f0;
     }
 
     /* Social Hub Preview section */
@@ -134,6 +155,7 @@
     .social-hub__title {
       font-size: 1.5rem;
       margin-bottom: 1rem;
+      color: #dedeea;
     }
     .social-hub__posts {
       display: grid;
@@ -141,15 +163,22 @@
       gap: 1rem;
     }
     .social-hub__post-card {
-      background-color: #ffffff;
-      border: 1px solid #ddd;
+      background-color: #1a1a2f;
+      border: 1px solid #2b2b4a;
       border-radius: 4px;
       padding: 1rem;
+    }
+    .social-hub__post-card h4 {
+      color: #d2d2ff;
+      margin-bottom: 0.5rem;
+    }
+    .social-hub__post-card p {
+      color: #cacadf;
     }
     .social-hub__view-more {
       display: inline-block;
       margin-top: 1rem;
-      background-color: #0070f3;
+      background-color: #7a00ff;
       color: #ffffff;
       padding: 0.5rem 1rem;
       border-radius: 4px;
@@ -157,13 +186,13 @@
       font-weight: bold;
     }
     .social-hub__view-more:hover {
-      background-color: #005bb5;
+      background-color: #5500b8;
     }
 
     /* Footer */
     footer {
-      background-color: #ffffff;
-      border-top: 1px solid #ddd;
+      background-color: #0f0f1f;
+      border-top: 1px solid #1f1f3c;
       padding: 1rem;
       text-align: center;
     }
@@ -175,15 +204,15 @@
       margin-bottom: 1rem;
     }
     .footer__link {
-      color: #0070f3;
+      color: #9a9af2;
       transition: color 0.3s ease;
     }
     .footer__link:hover {
-      color: #005bb5;
+      color: #e1e1ff;
     }
     .footer__copyright {
       font-size: 0.9rem;
-      color: #666;
+      color: #8888bb;
     }
 
     /* Responsive adjustments */
@@ -206,10 +235,13 @@
   <!-- Header Section -->
   <header>
     <div class="header__container">
-      <"C:\Users\TOP TOWN CLOTHING\OneDrive\Documents\AI - Social Media Influencer\ZaraLuxeWebsiteLogo.jpg">
-      <a href="/" class="header__logo" aria-label="ZaraHive Home">
-        <!e.g., <img src=""C:\Users\TOP TOWN CLOTHING\OneDrive\Documents\AI - Social Media Influencer\ZaraLuxeWebsiteLogo.jpg"" /> -->
-        ZaraHive
+      <!-- Logo placeholder replaced with the actual image -->
+      <a href="/" aria-label="ZaraHive Home">
+        <!-- Replace 'path/to/zara-luxe-ai-agent-hub-logo.png' with the actual path/filename for your image -->
+        <img 
+          src="C:\Users\TOP TOWN CLOTHING\OneDrive\Documents\AI - Social Media Influencer\ZaraLuxeWebsiteLogo.jpg" 
+          alt="Zara Luxe AI Agent Hub Logo" 
+          class="header__logo" />
       </a>
       
       <!-- Navigation bar -->
@@ -317,7 +349,6 @@
   <!-- Footer Section -->
   <footer>
     <div class="footer__links">
-      <!-- Replace with actual URLs to your TOS, Privacy Policy, etc. -->
       <a href="/terms" class="footer__link">Terms of Service</a>
       <a href="/privacy" class="footer__link">Privacy Policy</a>
       <a href="/contact" class="footer__link">Contact</a>
