--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@
     <div class="header__container">
       <!-- Logo placeholder replaced with the actual image -->
       <a href="/" aria-label="ZaraHive Home">
-        <!-- Replace 'C:\Users\TOP TOWN CLOTHING\OneDrive\Documents\AI - Social Media Influencer\ZaraLuxeWebsiteLogo.jpg -->
+        <!-- Replace 'path/to/zara-luxe-ai-agent-hub-logo.png' with the actual path/filename for your image -->
         <img 
-          src="C:\Users\TOP TOWN CLOTHING\OneDrive\Documents\AI - Social Media Influencer\ZaraLuxeWebsiteLogo.jpg" 
+          src="path/to/zara-luxe-ai-agent-hub-logo.png" 
           alt="Zara Luxe AI Agent Hub Logo" 
           class="header__logo" />
       </a>
