--- a/index.html
+++ b/index.html
@@ -237,10 +237,10 @@
     <div class="header__container">
       <!-- Logo placeholder replaced with the actual image -->
       <a href="/" aria-label="ZaraHive Home">
-        <!-- Replace 'path/to/zara-luxe-ai-agent-hub-logo.png' with the actual path/filename for your image -->
+        <!-- Use the new logo file name in the src attribute below -->
         <img 
-          src="path/to/zara-luxe-ai-agent-hub-logo.png" 
-          alt="Zara Luxe AI Agent Hub Logo" 
+          src="ZaraLuxeWebsiteLogo.jpg"
+          alt="Zara Luxe AI Agent Hub Logo"
           class="header__logo" />
       </a>
       
