--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       <a href="/" aria-label="ZaraHive Home">
         <!-- Use the new logo file name in the src attribute below -->
         <img 
-          src="ZaraLuxeWebsiteLogo.jpg"
+          src="Z logo.jpg"
           alt="Zara Luxe AI Agent Hub Logo"
           class="header__logo" />
       </a>
